# agentpool

./: CLAUDE.md  README.md  pyproject.toml
agentpool/: __init__.py  config.py  logging.py  mcp_server.py  messages.py  pipeline.py  pool.py  security.py  session.py  tasks.py
agentpool/sandbox/: __init__.py  base.py  docker.py  local.py
docs/: AGENTPOOL.md  MESSAGEBUS.md  PIPELINE.md  SANDBOXES.md  TASKBOARD.md
examples/: .env.example  hello.py  parallel.py  pipeline.py
tests/: README.md  conftest.py  test_config.py  test_integration.py  test_mcp_dispatch.py  test_messages.py  test_pipeline.py  test_pool.py  test_sandbox.py  test_security.py  test_taskboard.py
