[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpool"
version = "0.1.0"
description = "Parallel Claude SDK agent orchestration with sandboxing and inter-agent coordination"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
sdk = ["claude-agent-sdk"]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
include = ["agentpool*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Claude SDK and API credentials",
    "docker: requires Docker running",
]
